--- a/โปรเจกส่งBorntoDev/ayanokoji.HTML
+++ b/โปรเจกส่งBorntoDev/ayanokoji.HTML
@@ -26,10 +26,11 @@
             <div>
                 <p>• ความสูง: 176 เซนติเมตร</p>
             </div>
-
+            
 
 
         </div>
+        <a style="color: aqua;" class="a" href="index.html">ย้อนกลับ</a>
         </p>
         </p>
     </div>
